gcc/testsuite/rust/rustc/ui/union/union-const-pat.rs
union U {
    a: usize,
    b: usize,
}

const C: U = U { a: 10 };

fn main() {
    match C {
        C => {} // { dg-error "" "" { target *-*-* } }
        _ => {}
    }
}

